syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Amargar.PlaceByCenterID.proto.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "PlaceByCenterIDProto";
option objc_class_prefix = "HLW";

package Amargar;


service PlaceByCenterID {
  rpc GetPlacesByCenterID (PlaceByCenterIDRequest) returns (PlaceByCenterIDReplyList);
}

// The request message containing the user's name.
message PlaceByCenterIDRequest {
  int32 CenterID = 1;
}

// The response message containing the greetings.
message PlaceByCenterIDReply {
  int32 PlaceID = 1;
  string PlaceName = 2;
  int32 PlaceTypeCode = 3;
  int32 LinkPlaceID= 4;
  string AreaCode = 5;

}

message PlaceByCenterIDReplyList{
  repeated PlaceByCenterIDReply placesByCenterId = 1;
}